          and was reported as RT#9059, RT#12882, and RT#12786.  The documentation 
          about this has also been clarified that we return A URI object, but that
          it stringifies to the URI itself. 

        [DOCUMENTATION]
        * Fixed a misleading parm in the constructor.
        * Document the return value of set_visible (RT#6071, MJD, Mark Stosberg)

        [INTERNALS]
        * Made lots of little cleanups based on Perl::Critic
        * Fix Taint-mode warnings with Perl 5.6.1 (RT#16945)

1.18    Thu Feb  2 00:11:26 CST 2006
        [TESTS]
        * Makefile.PL now takes four new parms:
            * --live/nolive turns on/off the live tests
            * --local/nolocal turns on/off the local tests
            * --mech-dump/nomech-dump installs/doesn't the mech-dump program
            * --all turns on all tests and installs mech-dump

        * Fixed some failures in tests.  Non-existent URLs now have a
          "." postpended to them, so if someone's got a search domain
          with a wildcard (i.e. ignore.us) it'll ignore that.  Also,
          Google's second link is now a https:// link, which some Mechs
          can't handle.  Added a 'url_regex' which now makes it look at
          the second non-https link.  Thanks to Pete Krawczyk.

1.16    Fri Oct 28 17:34:20 CDT 2005
        [ENHANCEMENTS]
        * Sped up Mech significantly (~20% in some cases).  Images and
          links are extracted from the HTML, and objects are created,
          only when they're actually needed.  This will be a speedup for
          pages where you're only following links, or vice versa.

        [THINGS THAT MAY BREAK YOUR CODE]
        * If you've been relying on the $mech->{images} and $mech->{links}
          fields being populated so that you can bypass the $mech->images()
          and $mech->links() accessors, your code will break.  That's OK,
          because you should have been using the accessors all along.
