@@ -15,6 +15,7 @@ NEXT
         [DOCUMENTATION]
         * Fixed a misleading parm in the constructor.
         * Document the return value of set_visible (RT#6071, MJD, Mark Stosberg)
+        * Document that form_name and form_number return an HTML::Form object (Mark Stosberg)
 
         [INTERNALS]
         * Made lots of little cleanups based on Perl::Critic
